parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID var_declaration function_declaration main_declaration POINT
Rule 2     var_declaration -> INT variable_ent_list var_declaration
Rule 3     var_declaration -> FLOAT variable_float_list var_declaration
Rule 4     var_declaration -> ARRINT variable_arrint_list var_declaration
Rule 5     var_declaration -> empty
Rule 6     variable_ent_list -> ID SEMMICOLON
Rule 7     variable_ent_list -> ID COMMA variable_ent_list
Rule 8     variable_ent_list -> ID ASSIGN NUMINT SEMMICOLON
Rule 9     variable_ent_list -> ID ASSIGN NUMINT COMMA variable_ent_list
Rule 10    variable_float_list -> ID SEMMICOLON
Rule 11    variable_float_list -> ID COMMA variable_float_list
Rule 12    variable_float_list -> ID ASSIGN NUMFLOAT SEMMICOLON
Rule 13    variable_float_list -> ID ASSIGN NUMFLOAT COMMA variable_float_list
Rule 14    variable_arrint_list -> ID LSQUARE ID RSQUARE SEMMICOLON
Rule 15    variable_arrint_list -> ID LSQUARE ID RSQUARE COMMA variable_arrint_list
Rule 16    variable_arrint_list -> ID LSQUARE ID RSQUARE LSQUARE ID RSQUARE SEMMICOLON
Rule 17    variable_arrint_list -> ID LSQUARE ID RSQUARE LSQUARE ID RSQUARE COMMA variable_arrint_list
Rule 18    function_declaration -> function_1
Rule 19    function_declaration -> empty
Rule 20    function_1 -> FUNCTION ID LPAREN RPAREN LKEY estatuto RKEY function_1
Rule 21    function_1 -> FUNCTION ID LPAREN RPAREN LKEY estatuto RKEY
Rule 22    main_declaration -> MAIN LPAREN RPAREN LKEY estatuto RKEY
Rule 23    estatuto -> ciclo_for estatuto
Rule 24    estatuto -> ciclo_if estatuto
Rule 25    estatuto -> ciclo_while estatuto
Rule 26    estatuto -> read_process estatuto
Rule 27    estatuto -> print_process estatuto
Rule 28    estatuto -> call_process estatuto
Rule 29    estatuto -> id_asignacion estatuto
Rule 30    estatuto -> empty
Rule 31    call_process -> CALL ID LPAREN RPAREN SEMMICOLON
Rule 32    print_process -> PRINT LPAREN print_1 RPAREN SEMMICOLON
Rule 33    print_1 -> id print_aux_1 print_prima_1
Rule 34    print_aux_1 -> <empty>
Rule 35    print_prima_1 -> COMMA print_prima_2 print_1
Rule 36    print_prima_1 -> empty print_prima_2
Rule 37    print_prima_2 -> <empty>
Rule 38    read_process -> READ LPAREN sexp RPAREN SEMMICOLON
Rule 39    id_asignacion -> id id_asignacion_prima
Rule 40    id_asignacion_prima -> ASSIGN sexp SEMMICOLON
Rule 41    id_asignacion_prima -> LSQUARE expression RSQUARE ASSIGN sexp SEMMICOLON
Rule 42    id_asignacion_prima -> LSQUARE expression RSQUARE LSQUARE expression RSQUARE ASSIGN sexp SEMMICOLON
Rule 43    ciclo_for -> FOR LPAREN ID ASSIGN sexp SEMMICOLON sexp SEMMICOLON ID ASSIGN sexp RPAREN LKEY estatuto RKEY
Rule 44    ciclo_while -> WHILE ciclo_while_1 LPAREN sexp RPAREN LKEY estatuto RKEY ciclo_while_2
Rule 45    ciclo_while_1 -> <empty>
Rule 46    ciclo_while_2 -> <empty>
Rule 47    ciclo_if -> IF LPAREN sexp RPAREN ciclo_if_1 LKEY estatuto RKEY if_else
Rule 48    ciclo_if_1 -> <empty>
Rule 49    if_else -> ELSE LKEY if_else_1 estatuto RKEY
Rule 50    if_else -> empty
Rule 51    if_else_1 -> <empty>
Rule 52    sexp -> cuadruplo_1 sexprima
Rule 53    cuadruplo_1 -> expression
Rule 54    sexprima -> AND push_operator sexp
Rule 55    sexprima -> OR push_operator sexp
Rule 56    sexprima -> empty
Rule 57    expression -> exp
Rule 58    expressionp -> LT push_operator exp
Rule 59    expressionp -> GT push_operator exp
Rule 60    expressionp -> LTEQ push_operator exp
Rule 61    expressionp -> GTEQ push_operator exp
Rule 62    expressionp -> EQ push_operator exp
Rule 63    expressionp -> NEQ push_operator exp
Rule 64    expressionp -> empty
Rule 65    exp -> cuadruplo_3 expp
Rule 66    cuadruplo_3 -> term
Rule 67    expp -> PLUS push_operator exp
Rule 68    expp -> MINUS push_operator exp
Rule 69    expp -> empty
Rule 70    term -> cuadruplo_4 termp
Rule 71    cuadruplo_4 -> factor
Rule 72    termp -> DIVISION push_operator term
Rule 73    termp -> TIMES push_operator term
Rule 74    termp -> empty
Rule 75    push_operator -> <empty>
Rule 76    factor -> cons
Rule 77    factor -> LPAREN expression RPAREN
Rule 78    cons -> id
Rule 79    cons -> NUMINT int_type
Rule 80    cons -> NUMFLOAT float_type
Rule 81    int_type -> <empty>
Rule 82    float_type -> <empty>
Rule 83    id -> ID idp
Rule 84    idp -> LSQUARE sexp RSQUARE
Rule 85    idp -> LPAREN idpp RPAREN
Rule 86    idp -> empty
Rule 87    idpp -> sexp idppaux
Rule 88    idpp -> empty
Rule 89    idppaux -> COMMA idpp
Rule 90    idppaux -> empty
Rule 91    empty -> <empty>

Terminals, with rules where they appear

AND                  : 54
ARRINT               : 4
ASSIGN               : 8 9 12 13 40 41 42 43 43
CALL                 : 31
COMMA                : 7 9 11 13 15 17 35 89
DIVISION             : 72
ELSE                 : 49
EQ                   : 62
FLOAT                : 3
FOR                  : 43
FUNCTION             : 20 21
GT                   : 59
GTEQ                 : 61
ID                   : 1 6 7 8 9 10 11 12 13 14 14 15 15 16 16 16 17 17 17 20 21 31 43 43 83
IF                   : 47
INT                  : 2
LKEY                 : 20 21 22 43 44 47 49
LPAREN               : 20 21 22 31 32 38 43 44 47 77 85
LSQUARE              : 14 15 16 16 17 17 41 42 42 84
LT                   : 58
LTEQ                 : 60
MAIN                 : 22
MINUS                : 68
NEQ                  : 63
NUMFLOAT             : 12 13 80
NUMINT               : 8 9 79
OR                   : 55
PLUS                 : 67
POINT                : 1
PRINT                : 32
PROGRAM              : 1
READ                 : 38
RKEY                 : 20 21 22 43 44 47 49
RPAREN               : 20 21 22 31 32 38 43 44 47 77 85
RSQUARE              : 14 15 16 16 17 17 41 42 42 84
SEMMICOLON           : 6 8 10 12 14 16 31 32 38 40 41 42 43 43
TIMES                : 73
WHILE                : 44
error                : 

Nonterminals, with rules where they appear

call_process         : 28
ciclo_for            : 23
ciclo_if             : 24
ciclo_if_1           : 47
ciclo_while          : 25
ciclo_while_1        : 44
ciclo_while_2        : 44
cons                 : 76
cuadruplo_1          : 52
cuadruplo_3          : 65
cuadruplo_4          : 70
empty                : 5 19 30 36 50 56 64 69 74 86 88 90
estatuto             : 20 21 22 23 24 25 26 27 28 29 43 44 47 49
exp                  : 57 58 59 60 61 62 63 67 68
expp                 : 65
expression           : 41 42 42 53 77
expressionp          : 
factor               : 71
float_type           : 80
function_1           : 18 20
function_declaration : 1
id                   : 33 39 78
id_asignacion        : 29
id_asignacion_prima  : 39
idp                  : 83
idpp                 : 85 89
idppaux              : 87
if_else              : 47
if_else_1            : 49
int_type             : 79
main_declaration     : 1
print_1              : 32 35
print_aux_1          : 33
print_prima_1        : 33
print_prima_2        : 35 36
print_process        : 27
programa             : 0
push_operator        : 54 55 58 59 60 61 62 63 67 68 72 73
read_process         : 26
sexp                 : 38 40 41 42 43 43 43 44 47 54 55 84 87
sexprima             : 52
term                 : 66 72 73
termp                : 70
var_declaration      : 1 2 3 4
variable_arrint_list : 4 15 17
variable_ent_list    : 2 7 9
variable_float_list  : 3 11 13

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID var_declaration function_declaration main_declaration POINT

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID var_declaration function_declaration main_declaration POINT

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . var_declaration function_declaration main_declaration POINT
    (2) var_declaration -> . INT variable_ent_list var_declaration
    (3) var_declaration -> . FLOAT variable_float_list var_declaration
    (4) var_declaration -> . ARRINT variable_arrint_list var_declaration
    (5) var_declaration -> . empty
    (91) empty -> .

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    ARRINT          shift and go to state 4
    FUNCTION        reduce using rule 91 (empty -> .)
    MAIN            reduce using rule 91 (empty -> .)

    var_declaration                shift and go to state 7
    empty                          shift and go to state 8

state 4

    (4) var_declaration -> ARRINT . variable_arrint_list var_declaration
    (14) variable_arrint_list -> . ID LSQUARE ID RSQUARE SEMMICOLON
    (15) variable_arrint_list -> . ID LSQUARE ID RSQUARE COMMA variable_arrint_list
    (16) variable_arrint_list -> . ID LSQUARE ID RSQUARE LSQUARE ID RSQUARE SEMMICOLON
    (17) variable_arrint_list -> . ID LSQUARE ID RSQUARE LSQUARE ID RSQUARE COMMA variable_arrint_list

    ID              shift and go to state 10

    variable_arrint_list           shift and go to state 9

state 5

    (2) var_declaration -> INT . variable_ent_list var_declaration
    (6) variable_ent_list -> . ID SEMMICOLON
    (7) variable_ent_list -> . ID COMMA variable_ent_list
    (8) variable_ent_list -> . ID ASSIGN NUMINT SEMMICOLON
    (9) variable_ent_list -> . ID ASSIGN NUMINT COMMA variable_ent_list

    ID              shift and go to state 12

    variable_ent_list              shift and go to state 11

state 6

    (3) var_declaration -> FLOAT . variable_float_list var_declaration
    (10) variable_float_list -> . ID SEMMICOLON
    (11) variable_float_list -> . ID COMMA variable_float_list
    (12) variable_float_list -> . ID ASSIGN NUMFLOAT SEMMICOLON
    (13) variable_float_list -> . ID ASSIGN NUMFLOAT COMMA variable_float_list

    ID              shift and go to state 14

    variable_float_list            shift and go to state 13

state 7

    (1) programa -> PROGRAM ID var_declaration . function_declaration main_declaration POINT
    (18) function_declaration -> . function_1
    (19) function_declaration -> . empty
    (20) function_1 -> . FUNCTION ID LPAREN RPAREN LKEY estatuto RKEY function_1
    (21) function_1 -> . FUNCTION ID LPAREN RPAREN LKEY estatuto RKEY
    (91) empty -> .

    FUNCTION        shift and go to state 15
    MAIN            reduce using rule 91 (empty -> .)

    function_declaration           shift and go to state 16
    function_1                     shift and go to state 17
    empty                          shift and go to state 18

state 8

    (5) var_declaration -> empty .

    FUNCTION        reduce using rule 5 (var_declaration -> empty .)
    MAIN            reduce using rule 5 (var_declaration -> empty .)


state 9

    (4) var_declaration -> ARRINT variable_arrint_list . var_declaration
    (2) var_declaration -> . INT variable_ent_list var_declaration
    (3) var_declaration -> . FLOAT variable_float_list var_declaration
    (4) var_declaration -> . ARRINT variable_arrint_list var_declaration
    (5) var_declaration -> . empty
    (91) empty -> .

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    ARRINT          shift and go to state 4
    FUNCTION        reduce using rule 91 (empty -> .)
    MAIN            reduce using rule 91 (empty -> .)

    var_declaration                shift and go to state 19
    empty                          shift and go to state 8

state 10

    (14) variable_arrint_list -> ID . LSQUARE ID RSQUARE SEMMICOLON
    (15) variable_arrint_list -> ID . LSQUARE ID RSQUARE COMMA variable_arrint_list
    (16) variable_arrint_list -> ID . LSQUARE ID RSQUARE LSQUARE ID RSQUARE SEMMICOLON
    (17) variable_arrint_list -> ID . LSQUARE ID RSQUARE LSQUARE ID RSQUARE COMMA variable_arrint_list

    LSQUARE         shift and go to state 20


state 11

    (2) var_declaration -> INT variable_ent_list . var_declaration
    (2) var_declaration -> . INT variable_ent_list var_declaration
    (3) var_declaration -> . FLOAT variable_float_list var_declaration
    (4) var_declaration -> . ARRINT variable_arrint_list var_declaration
    (5) var_declaration -> . empty
    (91) empty -> .

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    ARRINT          shift and go to state 4
    FUNCTION        reduce using rule 91 (empty -> .)
    MAIN            reduce using rule 91 (empty -> .)

    var_declaration                shift and go to state 21
    empty                          shift and go to state 8

state 12

    (6) variable_ent_list -> ID . SEMMICOLON
    (7) variable_ent_list -> ID . COMMA variable_ent_list
    (8) variable_ent_list -> ID . ASSIGN NUMINT SEMMICOLON
    (9) variable_ent_list -> ID . ASSIGN NUMINT COMMA variable_ent_list

    SEMMICOLON      shift and go to state 23
    COMMA           shift and go to state 24
    ASSIGN          shift and go to state 22


state 13

    (3) var_declaration -> FLOAT variable_float_list . var_declaration
    (2) var_declaration -> . INT variable_ent_list var_declaration
    (3) var_declaration -> . FLOAT variable_float_list var_declaration
    (4) var_declaration -> . ARRINT variable_arrint_list var_declaration
    (5) var_declaration -> . empty
    (91) empty -> .

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    ARRINT          shift and go to state 4
    FUNCTION        reduce using rule 91 (empty -> .)
    MAIN            reduce using rule 91 (empty -> .)

    var_declaration                shift and go to state 25
    empty                          shift and go to state 8

state 14

    (10) variable_float_list -> ID . SEMMICOLON
    (11) variable_float_list -> ID . COMMA variable_float_list
    (12) variable_float_list -> ID . ASSIGN NUMFLOAT SEMMICOLON
    (13) variable_float_list -> ID . ASSIGN NUMFLOAT COMMA variable_float_list

    SEMMICOLON      shift and go to state 26
    COMMA           shift and go to state 27
    ASSIGN          shift and go to state 28


state 15

    (20) function_1 -> FUNCTION . ID LPAREN RPAREN LKEY estatuto RKEY function_1
    (21) function_1 -> FUNCTION . ID LPAREN RPAREN LKEY estatuto RKEY

    ID              shift and go to state 29


state 16

    (1) programa -> PROGRAM ID var_declaration function_declaration . main_declaration POINT
    (22) main_declaration -> . MAIN LPAREN RPAREN LKEY estatuto RKEY

    MAIN            shift and go to state 31

    main_declaration               shift and go to state 30

state 17

    (18) function_declaration -> function_1 .

    MAIN            reduce using rule 18 (function_declaration -> function_1 .)


state 18

    (19) function_declaration -> empty .

    MAIN            reduce using rule 19 (function_declaration -> empty .)


state 19

    (4) var_declaration -> ARRINT variable_arrint_list var_declaration .

    FUNCTION        reduce using rule 4 (var_declaration -> ARRINT variable_arrint_list var_declaration .)
    MAIN            reduce using rule 4 (var_declaration -> ARRINT variable_arrint_list var_declaration .)


state 20

    (14) variable_arrint_list -> ID LSQUARE . ID RSQUARE SEMMICOLON
    (15) variable_arrint_list -> ID LSQUARE . ID RSQUARE COMMA variable_arrint_list
    (16) variable_arrint_list -> ID LSQUARE . ID RSQUARE LSQUARE ID RSQUARE SEMMICOLON
    (17) variable_arrint_list -> ID LSQUARE . ID RSQUARE LSQUARE ID RSQUARE COMMA variable_arrint_list

    ID              shift and go to state 32


state 21

    (2) var_declaration -> INT variable_ent_list var_declaration .

    FUNCTION        reduce using rule 2 (var_declaration -> INT variable_ent_list var_declaration .)
    MAIN            reduce using rule 2 (var_declaration -> INT variable_ent_list var_declaration .)


state 22

    (8) variable_ent_list -> ID ASSIGN . NUMINT SEMMICOLON
    (9) variable_ent_list -> ID ASSIGN . NUMINT COMMA variable_ent_list

    NUMINT          shift and go to state 33


state 23

    (6) variable_ent_list -> ID SEMMICOLON .

    INT             reduce using rule 6 (variable_ent_list -> ID SEMMICOLON .)
    FLOAT           reduce using rule 6 (variable_ent_list -> ID SEMMICOLON .)
    ARRINT          reduce using rule 6 (variable_ent_list -> ID SEMMICOLON .)
    FUNCTION        reduce using rule 6 (variable_ent_list -> ID SEMMICOLON .)
    MAIN            reduce using rule 6 (variable_ent_list -> ID SEMMICOLON .)


state 24

    (7) variable_ent_list -> ID COMMA . variable_ent_list
    (6) variable_ent_list -> . ID SEMMICOLON
    (7) variable_ent_list -> . ID COMMA variable_ent_list
    (8) variable_ent_list -> . ID ASSIGN NUMINT SEMMICOLON
    (9) variable_ent_list -> . ID ASSIGN NUMINT COMMA variable_ent_list

    ID              shift and go to state 12

    variable_ent_list              shift and go to state 34

state 25

    (3) var_declaration -> FLOAT variable_float_list var_declaration .

    FUNCTION        reduce using rule 3 (var_declaration -> FLOAT variable_float_list var_declaration .)
    MAIN            reduce using rule 3 (var_declaration -> FLOAT variable_float_list var_declaration .)


state 26

    (10) variable_float_list -> ID SEMMICOLON .

    INT             reduce using rule 10 (variable_float_list -> ID SEMMICOLON .)
    FLOAT           reduce using rule 10 (variable_float_list -> ID SEMMICOLON .)
    ARRINT          reduce using rule 10 (variable_float_list -> ID SEMMICOLON .)
    FUNCTION        reduce using rule 10 (variable_float_list -> ID SEMMICOLON .)
    MAIN            reduce using rule 10 (variable_float_list -> ID SEMMICOLON .)


state 27

    (11) variable_float_list -> ID COMMA . variable_float_list
    (10) variable_float_list -> . ID SEMMICOLON
    (11) variable_float_list -> . ID COMMA variable_float_list
    (12) variable_float_list -> . ID ASSIGN NUMFLOAT SEMMICOLON
    (13) variable_float_list -> . ID ASSIGN NUMFLOAT COMMA variable_float_list

    ID              shift and go to state 14

    variable_float_list            shift and go to state 35

state 28

    (12) variable_float_list -> ID ASSIGN . NUMFLOAT SEMMICOLON
    (13) variable_float_list -> ID ASSIGN . NUMFLOAT COMMA variable_float_list

    NUMFLOAT        shift and go to state 36


state 29

    (20) function_1 -> FUNCTION ID . LPAREN RPAREN LKEY estatuto RKEY function_1
    (21) function_1 -> FUNCTION ID . LPAREN RPAREN LKEY estatuto RKEY

    LPAREN          shift and go to state 37


state 30

    (1) programa -> PROGRAM ID var_declaration function_declaration main_declaration . POINT

    POINT           shift and go to state 38


state 31

    (22) main_declaration -> MAIN . LPAREN RPAREN LKEY estatuto RKEY

    LPAREN          shift and go to state 39


state 32

    (14) variable_arrint_list -> ID LSQUARE ID . RSQUARE SEMMICOLON
    (15) variable_arrint_list -> ID LSQUARE ID . RSQUARE COMMA variable_arrint_list
    (16) variable_arrint_list -> ID LSQUARE ID . RSQUARE LSQUARE ID RSQUARE SEMMICOLON
    (17) variable_arrint_list -> ID LSQUARE ID . RSQUARE LSQUARE ID RSQUARE COMMA variable_arrint_list

    RSQUARE         shift and go to state 40


state 33

    (8) variable_ent_list -> ID ASSIGN NUMINT . SEMMICOLON
    (9) variable_ent_list -> ID ASSIGN NUMINT . COMMA variable_ent_list

    SEMMICOLON      shift and go to state 41
    COMMA           shift and go to state 42


state 34

    (7) variable_ent_list -> ID COMMA variable_ent_list .

    INT             reduce using rule 7 (variable_ent_list -> ID COMMA variable_ent_list .)
    FLOAT           reduce using rule 7 (variable_ent_list -> ID COMMA variable_ent_list .)
    ARRINT          reduce using rule 7 (variable_ent_list -> ID COMMA variable_ent_list .)
    FUNCTION        reduce using rule 7 (variable_ent_list -> ID COMMA variable_ent_list .)
    MAIN            reduce using rule 7 (variable_ent_list -> ID COMMA variable_ent_list .)


state 35

    (11) variable_float_list -> ID COMMA variable_float_list .

    INT             reduce using rule 11 (variable_float_list -> ID COMMA variable_float_list .)
    FLOAT           reduce using rule 11 (variable_float_list -> ID COMMA variable_float_list .)
    ARRINT          reduce using rule 11 (variable_float_list -> ID COMMA variable_float_list .)
    FUNCTION        reduce using rule 11 (variable_float_list -> ID COMMA variable_float_list .)
    MAIN            reduce using rule 11 (variable_float_list -> ID COMMA variable_float_list .)


state 36

    (12) variable_float_list -> ID ASSIGN NUMFLOAT . SEMMICOLON
    (13) variable_float_list -> ID ASSIGN NUMFLOAT . COMMA variable_float_list

    SEMMICOLON      shift and go to state 43
    COMMA           shift and go to state 44


state 37

    (20) function_1 -> FUNCTION ID LPAREN . RPAREN LKEY estatuto RKEY function_1
    (21) function_1 -> FUNCTION ID LPAREN . RPAREN LKEY estatuto RKEY

    RPAREN          shift and go to state 45


state 38

    (1) programa -> PROGRAM ID var_declaration function_declaration main_declaration POINT .

    $end            reduce using rule 1 (programa -> PROGRAM ID var_declaration function_declaration main_declaration POINT .)


state 39

    (22) main_declaration -> MAIN LPAREN . RPAREN LKEY estatuto RKEY

    RPAREN          shift and go to state 46


state 40

    (14) variable_arrint_list -> ID LSQUARE ID RSQUARE . SEMMICOLON
    (15) variable_arrint_list -> ID LSQUARE ID RSQUARE . COMMA variable_arrint_list
    (16) variable_arrint_list -> ID LSQUARE ID RSQUARE . LSQUARE ID RSQUARE SEMMICOLON
    (17) variable_arrint_list -> ID LSQUARE ID RSQUARE . LSQUARE ID RSQUARE COMMA variable_arrint_list

    SEMMICOLON      shift and go to state 47
    COMMA           shift and go to state 48
    LSQUARE         shift and go to state 49


state 41

    (8) variable_ent_list -> ID ASSIGN NUMINT SEMMICOLON .

    INT             reduce using rule 8 (variable_ent_list -> ID ASSIGN NUMINT SEMMICOLON .)
    FLOAT           reduce using rule 8 (variable_ent_list -> ID ASSIGN NUMINT SEMMICOLON .)
    ARRINT          reduce using rule 8 (variable_ent_list -> ID ASSIGN NUMINT SEMMICOLON .)
    FUNCTION        reduce using rule 8 (variable_ent_list -> ID ASSIGN NUMINT SEMMICOLON .)
    MAIN            reduce using rule 8 (variable_ent_list -> ID ASSIGN NUMINT SEMMICOLON .)


state 42

    (9) variable_ent_list -> ID ASSIGN NUMINT COMMA . variable_ent_list
    (6) variable_ent_list -> . ID SEMMICOLON
    (7) variable_ent_list -> . ID COMMA variable_ent_list
    (8) variable_ent_list -> . ID ASSIGN NUMINT SEMMICOLON
    (9) variable_ent_list -> . ID ASSIGN NUMINT COMMA variable_ent_list

    ID              shift and go to state 12

    variable_ent_list              shift and go to state 50

state 43

    (12) variable_float_list -> ID ASSIGN NUMFLOAT SEMMICOLON .

    INT             reduce using rule 12 (variable_float_list -> ID ASSIGN NUMFLOAT SEMMICOLON .)
    FLOAT           reduce using rule 12 (variable_float_list -> ID ASSIGN NUMFLOAT SEMMICOLON .)
    ARRINT          reduce using rule 12 (variable_float_list -> ID ASSIGN NUMFLOAT SEMMICOLON .)
    FUNCTION        reduce using rule 12 (variable_float_list -> ID ASSIGN NUMFLOAT SEMMICOLON .)
    MAIN            reduce using rule 12 (variable_float_list -> ID ASSIGN NUMFLOAT SEMMICOLON .)


state 44

    (13) variable_float_list -> ID ASSIGN NUMFLOAT COMMA . variable_float_list
    (10) variable_float_list -> . ID SEMMICOLON
    (11) variable_float_list -> . ID COMMA variable_float_list
    (12) variable_float_list -> . ID ASSIGN NUMFLOAT SEMMICOLON
    (13) variable_float_list -> . ID ASSIGN NUMFLOAT COMMA variable_float_list

    ID              shift and go to state 14

    variable_float_list            shift and go to state 51

state 45

    (20) function_1 -> FUNCTION ID LPAREN RPAREN . LKEY estatuto RKEY function_1
    (21) function_1 -> FUNCTION ID LPAREN RPAREN . LKEY estatuto RKEY

    LKEY            shift and go to state 52


state 46

    (22) main_declaration -> MAIN LPAREN RPAREN . LKEY estatuto RKEY

    LKEY            shift and go to state 53


state 47

    (14) variable_arrint_list -> ID LSQUARE ID RSQUARE SEMMICOLON .

    INT             reduce using rule 14 (variable_arrint_list -> ID LSQUARE ID RSQUARE SEMMICOLON .)
    FLOAT           reduce using rule 14 (variable_arrint_list -> ID LSQUARE ID RSQUARE SEMMICOLON .)
    ARRINT          reduce using rule 14 (variable_arrint_list -> ID LSQUARE ID RSQUARE SEMMICOLON .)
    FUNCTION        reduce using rule 14 (variable_arrint_list -> ID LSQUARE ID RSQUARE SEMMICOLON .)
    MAIN            reduce using rule 14 (variable_arrint_list -> ID LSQUARE ID RSQUARE SEMMICOLON .)


state 48

    (15) variable_arrint_list -> ID LSQUARE ID RSQUARE COMMA . variable_arrint_list
    (14) variable_arrint_list -> . ID LSQUARE ID RSQUARE SEMMICOLON
    (15) variable_arrint_list -> . ID LSQUARE ID RSQUARE COMMA variable_arrint_list
    (16) variable_arrint_list -> . ID LSQUARE ID RSQUARE LSQUARE ID RSQUARE SEMMICOLON
    (17) variable_arrint_list -> . ID LSQUARE ID RSQUARE LSQUARE ID RSQUARE COMMA variable_arrint_list

    ID              shift and go to state 10

    variable_arrint_list           shift and go to state 54

state 49

    (16) variable_arrint_list -> ID LSQUARE ID RSQUARE LSQUARE . ID RSQUARE SEMMICOLON
    (17) variable_arrint_list -> ID LSQUARE ID RSQUARE LSQUARE . ID RSQUARE COMMA variable_arrint_list

    ID              shift and go to state 55


state 50

    (9) variable_ent_list -> ID ASSIGN NUMINT COMMA variable_ent_list .

    INT             reduce using rule 9 (variable_ent_list -> ID ASSIGN NUMINT COMMA variable_ent_list .)
    FLOAT           reduce using rule 9 (variable_ent_list -> ID ASSIGN NUMINT COMMA variable_ent_list .)
    ARRINT          reduce using rule 9 (variable_ent_list -> ID ASSIGN NUMINT COMMA variable_ent_list .)
    FUNCTION        reduce using rule 9 (variable_ent_list -> ID ASSIGN NUMINT COMMA variable_ent_list .)
    MAIN            reduce using rule 9 (variable_ent_list -> ID ASSIGN NUMINT COMMA variable_ent_list .)


state 51

    (13) variable_float_list -> ID ASSIGN NUMFLOAT COMMA variable_float_list .

    INT             reduce using rule 13 (variable_float_list -> ID ASSIGN NUMFLOAT COMMA variable_float_list .)
    FLOAT           reduce using rule 13 (variable_float_list -> ID ASSIGN NUMFLOAT COMMA variable_float_list .)
    ARRINT          reduce using rule 13 (variable_float_list -> ID ASSIGN NUMFLOAT COMMA variable_float_list .)
    FUNCTION        reduce using rule 13 (variable_float_list -> ID ASSIGN NUMFLOAT COMMA variable_float_list .)
    MAIN            reduce using rule 13 (variable_float_list -> ID ASSIGN NUMFLOAT COMMA variable_float_list .)


state 52

    (20) function_1 -> FUNCTION ID LPAREN RPAREN LKEY . estatuto RKEY function_1
    (21) function_1 -> FUNCTION ID LPAREN RPAREN LKEY . estatuto RKEY
    (23) estatuto -> . ciclo_for estatuto
    (24) estatuto -> . ciclo_if estatuto
    (25) estatuto -> . ciclo_while estatuto
    (26) estatuto -> . read_process estatuto
    (27) estatuto -> . print_process estatuto
    (28) estatuto -> . call_process estatuto
    (29) estatuto -> . id_asignacion estatuto
    (30) estatuto -> . empty
    (43) ciclo_for -> . FOR LPAREN ID ASSIGN sexp SEMMICOLON sexp SEMMICOLON ID ASSIGN sexp RPAREN LKEY estatuto RKEY
    (47) ciclo_if -> . IF LPAREN sexp RPAREN ciclo_if_1 LKEY estatuto RKEY if_else
    (44) ciclo_while -> . WHILE ciclo_while_1 LPAREN sexp RPAREN LKEY estatuto RKEY ciclo_while_2
    (38) read_process -> . READ LPAREN sexp RPAREN SEMMICOLON
    (32) print_process -> . PRINT LPAREN print_1 RPAREN SEMMICOLON
    (31) call_process -> . CALL ID LPAREN RPAREN SEMMICOLON
    (39) id_asignacion -> . id id_asignacion_prima
    (91) empty -> .
    (83) id -> . ID idp

    FOR             shift and go to state 67
    IF              shift and go to state 71
    WHILE           shift and go to state 59
    READ            shift and go to state 63
    PRINT           shift and go to state 60
    CALL            shift and go to state 64
    RKEY            reduce using rule 91 (empty -> .)
    ID              shift and go to state 70

    ciclo_for                      shift and go to state 56
    read_process                   shift and go to state 57
    ciclo_while                    shift and go to state 58
    estatuto                       shift and go to state 62
    id                             shift and go to state 61
    ciclo_if                       shift and go to state 68
    print_process                  shift and go to state 69
    id_asignacion                  shift and go to state 65
    call_process                   shift and go to state 72
    empty                          shift and go to state 66

state 53

    (22) main_declaration -> MAIN LPAREN RPAREN LKEY . estatuto RKEY
    (23) estatuto -> . ciclo_for estatuto
    (24) estatuto -> . ciclo_if estatuto
    (25) estatuto -> . ciclo_while estatuto
    (26) estatuto -> . read_process estatuto
    (27) estatuto -> . print_process estatuto
    (28) estatuto -> . call_process estatuto
    (29) estatuto -> . id_asignacion estatuto
    (30) estatuto -> . empty
    (43) ciclo_for -> . FOR LPAREN ID ASSIGN sexp SEMMICOLON sexp SEMMICOLON ID ASSIGN sexp RPAREN LKEY estatuto RKEY
    (47) ciclo_if -> . IF LPAREN sexp RPAREN ciclo_if_1 LKEY estatuto RKEY if_else
    (44) ciclo_while -> . WHILE ciclo_while_1 LPAREN sexp RPAREN LKEY estatuto RKEY ciclo_while_2
    (38) read_process -> . READ LPAREN sexp RPAREN SEMMICOLON
    (32) print_process -> . PRINT LPAREN print_1 RPAREN SEMMICOLON
    (31) call_process -> . CALL ID LPAREN RPAREN SEMMICOLON
    (39) id_asignacion -> . id id_asignacion_prima
    (91) empty -> .
    (83) id -> . ID idp

    FOR             shift and go to state 67
    IF              shift and go to state 71
    WHILE           shift and go to state 59
    READ            shift and go to state 63
    PRINT           shift and go to state 60
    CALL            shift and go to state 64
    RKEY            reduce using rule 91 (empty -> .)
    ID              shift and go to state 70

    ciclo_for                      shift and go to state 56
    read_process                   shift and go to state 57
    ciclo_while                    shift and go to state 58
    estatuto                       shift and go to state 73
    id                             shift and go to state 61
    ciclo_if                       shift and go to state 68
    print_process                  shift and go to state 69
    id_asignacion                  shift and go to state 65
    call_process                   shift and go to state 72
    empty                          shift and go to state 66

state 54

    (15) variable_arrint_list -> ID LSQUARE ID RSQUARE COMMA variable_arrint_list .

    INT             reduce using rule 15 (variable_arrint_list -> ID LSQUARE ID RSQUARE COMMA variable_arrint_list .)
    FLOAT           reduce using rule 15 (variable_arrint_list -> ID LSQUARE ID RSQUARE COMMA variable_arrint_list .)
    ARRINT          reduce using rule 15 (variable_arrint_list -> ID LSQUARE ID RSQUARE COMMA variable_arrint_list .)
    FUNCTION        reduce using rule 15 (variable_arrint_list -> ID LSQUARE ID RSQUARE COMMA variable_arrint_list .)
    MAIN            reduce using rule 15 (variable_arrint_list -> ID LSQUARE ID RSQUARE COMMA variable_arrint_list .)


state 55

    (16) variable_arrint_list -> ID LSQUARE ID RSQUARE LSQUARE ID . RSQUARE SEMMICOLON
    (17) variable_arrint_list -> ID LSQUARE ID RSQUARE LSQUARE ID . RSQUARE COMMA variable_arrint_list

    RSQUARE         shift and go to state 74


state 56
